# framework-argb-wallpaper-sync

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/framework_argb_wallpaper_sync/: __init__.py  cli.py  framework_tool.py  palette.py  wallpaper.py
tests/: test_framework_tool.py  test_palette.py  test_wallpaper.py
